--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,9 @@
+
+1.0rc1
+------
+- maintenance and bugfixes
+- many improvements
+
 0.9.12b
 ------
 - refactored previous package nive -> nive, nive_cms, nive_userdb
