--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,12 @@
+1.3.1
+-----
+- nive base package updates
+- fixes
+
+----------------------------------------------------------------------------------------
+Python 3.7 refactor. removed python 2 compatibility
+----------------------------------------------------------------------------------------
+
 1.0.3
 ------
 - maintenance and bugfixes
