--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,13 @@
+1.6.2
+-----
+- fixes
+- py 3.12
+- removed Literal from UsernameValidator()
+
+1.6.1
+-----
+- fixes
+
 1.5.1
 -----
 - setup.py to pyproject.toml
